# pygbm

./: README.md  environment.yaml  pyproject.toml
pygbm/: gbm_simulator.py
pygbm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
